--- a/package.json
+++ b/package.json
@@ -1,48 +1,22 @@
 {
-    "name"          : "oito",
-    "version"       : "0.0.3",
-    "author"        : "Pedro Sousa ( Vor @ SketchPunk Labs )",
-    "description"   : "Math Library",
-    "keywords"      : [],
-    "license"       : "MIT",
-
-    "homepage"      : "https://github.com/sketchpunklabs/oito#readme",
-    "repository"    : { "type": "git", "url": "git+https://github.com/sketchpunklabs/oito.git" },
-    "bugs"          : { "url": "https://github.com/sketchpunklabs/oito/issues" },
-
-    "files"         : [ "dist" ],
-    "main"          : "./dist/oito.cjs.js",
-    "module"        : "./dist/oito.es.js",
-    "types"         : "./dist/oito.d.ts",
-    "exports": {
-        ".": {
-            "import"  : "./dist/oito.es.js",
-            "require" : "./dist/oito.cjs.js"
-        }
-    },
-
-    "scripts"       : {
-        "dev"           : "vite",
-        "build"         : "vite build",
-        "build:fn"      : "vite build --config vite-fn.config.js",
-        "build:maths"   : "vite build --config vite-maths.config.js",
-        "build:types"   : "tsc --declaration --noEmit false --emitDeclarationOnly --strict false --outDir ./dist",
-        "build:site"    : "vite build --mode site",
-        "pack"          : "npm pack",
-        "preview-site"  : "vite preview",
-        "lint"          : "eslint . --ext .ts"
-    },
-
-    "dependencies": {
-    },
-
-    "devDependencies": {
-        "typescript"    : "^4.6.2",
-        "vite"          : "^2.8.6",
-        "three"         : "^0.138.2",
-
-        "eslint"                            : "^8.10.0",
-        "@typescript-eslint/eslint-plugin"  : "^5.13.0",
-        "@typescript-eslint/parser"         : "^5.13.0"
-    }
+  "name": "oito",
+  "version": "0.0.1",
+  "main": "index.js",
+  "scripts": {
+    "build": "tsc --build --verbose",
+    "dev": "vite"
+  },
+  "workspaces": [
+    "packages/*"
+  ],
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "esbuild-plugin-text-replace": "^1.3.0",
+    "eslint": "^8.40.0",
+    "three": "^0.152.2",
+    "typescript": "^5.0.4",
+    "vite": "^4.3.5",
+    "vite-plugin-list-directory-contents": "^1.4.5"
+  }
 }
