--- a/packages/ray/tsconfig.json
+++ b/packages/ray/tsconfig.json
@@ -1,14 +1,11 @@
 {
   "extends"           : "../../tsconfig.json",
   "include"           : [ "src/**/*" ],
-  "exclude"           : [ "**/*.test.ts", "node_modules" ],
   "compilerOptions"   : {
       "rootDir"               : "src",
       "outDir"                : "./build",
       "tsBuildInfoFile"       : "./build/tsconfig.tsbuildinfo",
+      "emitDeclarationOnly"   : false,
       "composite"             : true,
   },
-
-  "references": [
-  ],
 }
