more updates related to polygons

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         { "path": "packages/fn" },
         { "path": "packages/oop" },
         { "path": "packages/geo" },
-        { "path": "packages/ray" }
+        { "path": "packages/ray" },
+        { "path": "packages/halfedge" },
     ],
 
     "compilerOptions": {
@@ -38,11 +39,12 @@
         "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
         "baseUrl": ".",                                     /* Specify the base directory to resolve non-relative module names. */
         "paths": {
-            "@oito/core"    : [ "./packages/core" ],
-            "@oito/fn"      : [ "./packages/fn" ],
-            "@oito/oop"     : [ "./packages/oop" ],
-            "@oito/geo"     : [ "./packages/geo" ],
-            "@oito/ray"     : [ "./packages/ray" ]
+            "@oito/core"        : [ "./packages/core" ],
+            "@oito/fn"          : [ "./packages/fn" ],
+            "@oito/oop"         : [ "./packages/oop" ],
+            "@oito/geo"         : [ "./packages/geo" ],
+            "@oito/ray"         : [ "./packages/ray" ],
+            "@oito/halfedge"    : [ "./packages/halfedge" ]
         },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
         
         // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
