--- a/package.json
+++ b/package.json
@@ -6,19 +6,21 @@
     "build": "tsc --build --verbose",
     "dev": "vite"
   },
-  
   "workspaces": [
     "packages/*"
   ],
-
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "esbuild-plugin-text-replace": "^1.3.0",
     "eslint": "^8.40.0",
+    "rollup-plugin-cleanup": "^3.2.1",
     "three": "^0.152.2",
     "typescript": "^5.0.4",
     "vite": "^4.3.5",
     "vite-plugin-list-directory-contents": "^1.4.5"
+  },
+  "dependencies": {
+    "@rollup/plugin-replace": "^5.0.2"
   }
 }
