--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "build" : "tsc --build",
-    "esbuild"  : "node ./es_build.mjs",
-    "vite_build": "vite build --config vite.build.js"
+    "tscbuild"  : "tsc --build",
+    "esbuild"   : "node ./es_build.mjs",
+    "build"     : "vite build --config vite.build.js"
   },
   "keywords": [],
   "author": "",
