--- a/packages/geo/package.json
+++ b/packages/geo/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "build" : "tsc --build",
+    "tscbuild" : "tsc --build",
     "esbuild"  : "node ./es_build.mjs",
-    "vite_build": "vite build --config vite.build.js"
+    "build": "vite build --config vite.build.js"
   },
   "keywords": [],
   "author": "",
