--- a/packages/ray/package.json
+++ b/packages/ray/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "build"   : "tsc --build",
-    "esbuild"    : "node ./es_build.mjs"
+    "tscbuild" : "tsc --build",
+    "esbuild"  : "node ./es_build.mjs",
+    "build": "vite build --config vite.build.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "MIT"
 }
