--- a/packages/ray/tsconfig.json
+++ b/packages/ray/tsconfig.json
@@ -1,11 +1,15 @@
 {
   "extends"           : "../../tsconfig.json",
-  "include"           : [ "src/**/*" ],
+  "include"           : [ "src/**/*", "../types/*"],
+  "exclude"           : [ "**/*.test.ts", "node_modules" ],
   "compilerOptions"   : {
       "rootDir"               : "src",
       "outDir"                : "./build",
       "tsBuildInfoFile"       : "./build/tsconfig.tsbuildinfo",
-      "emitDeclarationOnly"   : false,
       "composite"             : true,
   },
+
+  "references": [
+    { "path": "../oop" }
+  ],
 }
