--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "oito",
-  "version": "0.0.1",
-  "main": "index.js",
-  "scripts": {
-    "build": "tsc --build --verbose",
-    "dev": "vite"
+  "name"    : "oito",
+  "version" : "0.0.1",
+  "main"    : "index.js",
+  "scripts" : {
+    "build" : "tsc --build --verbose",
+    "dev"   : "vite"
   },
-  "workspaces": [
-    "packages/*"
-  ],
+
+  "workspaces": [ "packages/*" ],
+
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
+    "@rollup/plugin-replace": "^5.0.2",
+    "rollup-plugin-cleanup": "^3.2.1",
     "esbuild-plugin-text-replace": "^1.3.0",
     "eslint": "^8.40.0",
-    "rollup-plugin-cleanup": "^3.2.1",
     "three": "^0.152.2",
     "typescript": "^5.0.4",
     "vite": "^4.3.5",
     "vite-plugin-list-directory-contents": "^1.4.5"
   },
-  "dependencies": {
-    "@rollup/plugin-replace": "^5.0.2"
+
+  "dependencies": {    
   }
 }
